sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:4: error: not found: value getNombeValeurs
  var zonerouge=getNombeValeurs()-1
                ^DutchFlagAlgo:6: error: not found: value getNombreValeurs
  var len=getNombreValeurs()-1
          ^