sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var zonebleue=0
  var zonerouge=getNombeValeurs()-1
  var zoneblanche=1
  var len=getNombreValeurs()-1
  while (zonebleue<zonerouge){
    if (getCouleur(zonebleue)==ROUGE){
      for (i<-zonebleue to zonerouge-1){
        echange(i,i+1)
      }
      zonerouge-=1
    }
    if (getCouleur(zonerouge)==BLEU){
      for (i<-zonerouge to zonebleue+1){
        echange(i,i-1)
      }
      zonebleue+=1
    }
    if (getCouleur(zonebleue)==BLANC){
      zonebleue+=1
    }
    if (getCouleur(zonerouge)==BLANC){
      zonerouge-=1
    }
  }
  
}
